fix spacing issues in Safari

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,21 +1,22 @@
 .Home {
   display              : grid;
   /* this is STRICTLY A BUSINESS ROBOT, and the color should reflect that! */
-  grid-template-columns: 0fr min-content 4fr min-content 0fr;
+  grid-template-columns: 0fr min-content 4fr max-content 0fr;
   gap                  : .4rem;
-  grid-template-rows   : auto min-content 1fr;
+  grid-template-rows   : 0fr auto min-content 1fr;
   height               : 100vh;
-  background-color: #c7c7b1;
-  color: #000000;
+  width                : 100vw;
+  background-color     : #c7c7b1;
+  color                : #000000;
 }
 
 .Home.darkTheme {
   background-color: #313131;
-  color: #ffffff;
+  color           : #ffffff;
 }
 
 .header {
-  display: none;
+  display         : none;
   grid-column     : 1/6;
   grid-row        : 1;
   background-color: #000000;
@@ -27,11 +28,11 @@
 
 @media (max-width: 800px) {
   .Home {
-    height               : 90vh;
+    height                  : 90vh;
     /* display              : grid; */
     /* this is STRICTLY A BUSINESS ROBOT, and the color should reflect that! */
-    grid-template-columns: 0fr auto 0fr;
-    grid-template-rows   : min-content min-content min-content min-content;
+    grid-template-columns   : 0fr auto 0fr;
+    grid-template-rows      : min-content min-content min-content min-content;
     /* gap                  : .4rem; */
     /* grid-template-rows   : unset; */
     /* height               : 100vh; */
