--- a/src/components/Messages/Messages.css
+++ b/src/components/Messages/Messages.css
@@ -1,5 +1,5 @@
 .Messages {
-  grid-row     : 4;
+  grid-row     : 5;
   grid-column  : 2 / 5;
   height       : fit-content;
   margin-bottom: .4rem;
